--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,10 +12,7 @@
   <head>
     {% include head.html %}
     {% include head/custom.html %}
-    {% if site.google_analytics
-          include google_analytics
-        endif
-    %}
+    {% include google-analytics.html %}
   </head>
 
   <body class="layout--{{ page.layout | default: layout.layout }}{% if page.classes or layout.classes %}{{ page.classes | default: layout.classes | join: ' ' | prepend: ' ' }}{% endif %}">
