--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -1,8 +1,9 @@
 ---
 layout: archive
 ---
-
-{{ content }}
+<div class="initial-content">
+  {{ content }}
+</div>
 
 <ul class="taxonomy__index">
   {% assign postsInYear = site.posts | group_by_exp: 'post', 'post.date | date: "%Y"' %}
