--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: archive
 ---
 <!-- https://github.com/lezhin/lezhin.github.io/blob/master/_layouts/post.html -->
 <div class="post">
