사이드메뉴바 테스트 실패
사이드메뉴바 테스트 실패

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -19,6 +19,10 @@
       {% include nav_list nav=page.sidebar.nav %}
     {% endif %}
   {% endif %}
+  <!-- 사이트바 메뉴 추가 테스트 2019-03-12
+    UI 가 안 나옴. CSS 수정해야되는데 잘 몰라서 그냥 다시 코멘트 처리
+  -->
+  <!--
   <div>
     <div class="sidebar-nav-item">Category</div>
     <nav class="content-ul">
@@ -33,5 +37,6 @@
       {% endfor %}
     </nav>
   </div>
+  -->
   </div>
 {% endif %}
