--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -22,7 +22,7 @@
     <div class="sidebar-nav-item">Category</div>
     <nav class="content-ul">
       {% for category in site.categories %}
-      <a href="{{ url }}/{{ site.category_dir }}#{{ category | first }}" class="sidebar-nav-item pl-3rem">
+      <a href="https://dorbae.github.io/{{ category | first }}" class="sidebar-nav-item pl-3rem">
         <span class="name">
           {{ category | first }}
         </span>
