--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -39,7 +39,7 @@
   <!--
     2019-08-21 사이드바 카테고리 추가
   -->
-  <div>
+  <!-- <div>
     <div class="sidebar-nav-item">Category</div>
     <nav class="content-ul">
       {% for category in site.categories %}
@@ -52,5 +52,5 @@
       {% endfor %}
     </nav>
   </div>
-</div>
+</div> -->
 {% endif %}
