--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,8 @@
 
 {% include seo.html %}
 
-<link href="{% if site.atom_feed.path %}{{ site.atom_feed.path }}{% else %}{{ '/feed.xml' | relative_url }}{% endif %}" type="application/atom+xml" rel="alternate" title="{{ site.title }} Feed">
+<link href="{% if site.atom_feed.path %}{{ site.atom_feed.path }}{% else %}{{ '/feed.xml' | relative_url }}{% endif %}"
+  type="application/atom+xml" rel="alternate" title="{{ site.title }} Feed">
 
 <!-- http://t.co/dKP3o1e -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,6 +15,104 @@
 <!-- For all browsers -->
 <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
 
+<style>
+  .navigation {
+    margin-bottom: 0;
+    margin-left: 0;
+    margin-top: 20px;
+    list-style-type: none;
+  }
+
+  .navigation li {
+    float: right;
+    position: relative;
+    list-style: none;
+  }
+
+  .navigation li a {
+    color: #333;
+    font-weight: normal;
+    font-size: 12px;
+    border-radius: 5px;
+    padding: 8px 10px;
+    display: block;
+    font-weight: bold;
+    text-transform: uppercase;
+    white-space: nowrap;
+    line-height: 25px;
+  }
+
+  .navigation ul li a {
+    border-radius: 0;
+    padding: 5px 10px;
+    margin: 5px;
+    font-weight: normal;
+    text-transform: initial;
+  }
+
+  .navigation li>ul {
+    background: white;
+    position: absolute;
+    list-style-type: none;
+    top: 30px;
+    margin: 0;
+    padding: 0;
+    border: 2px solid #666;
+    border-radius: 5px;
+    left: 0;
+    display: none;
+    min-width: 100%;
+  }
+
+  .navigation li:hover>ul {
+    display: block;
+    list-style: none;
+  }
+
+  .navigation li ul li {
+    display: block;
+    float: none;
+    margin-left: 0;
+  }
+
+  .navigation li ul li a:hover {
+    border-radius: 0;
+    color: #444;
+    background: #eeeeee;
+  }
+
+  .navigation>li a:hover,
+  .navigation li>ul:hover+a,
+  .navigation li.current>a {
+    color: #86569A;
+  }
+
+  .navigation li.current>a {
+    font-weight: bold
+  }
+
+  .navigation li a[href^=http]:after {
+    font-family: "fontello";
+    font-style: normal;
+    font-weight: normal;
+    content: '\e9c8';
+    speak: none;
+    display: inline-block;
+    text-decoration: inherit;
+    width: 1em;
+    margin-right: .3em;
+    text-align: center;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1em;
+    margin-left: .3em;
+  }
+
+  .navigation .second-level {
+    left: 100%;
+    top: 0;
+  }
+</style>
 <!--[if lte IE 9]>
   <style>
     /* old IE unsupported flexbox fixes */
@@ -30,42 +129,44 @@
 <![endif]-->
 
 {% if site.head_scripts %}
-  {% for script in site.head_scripts %}
-    {% if script contains "://" %}
-      {% capture script_path %}{{ script }}{% endcapture %}
-    {% else %}
-      {% capture script_path %}{{ script | relative_url }}{% endcapture %}
-    {% endif %}
-    <script src="{{ script_path }}"></script>
-  {% endfor %}
+{% for script in site.head_scripts %}
+{% if script contains "://" %}
+{% capture script_path %}{{ script }}{% endcapture %}
+{% else %}
+{% capture script_path %}{{ script | relative_url }}{% endcapture %}
+{% endif %}
+<script src="{{ script_path }}"></script>
+{% endfor %}
 {% endif %}
 
 <ul class="navigation" style="clear:both;">
-    {% for link in site.navigation %}
-      {% assign url = page.url|remove:'index.html' %}
-      {% assign hasFirst = link.first-level != undefined %}          
-      <li 
-          {% if hasFirst %} class="nested" {% endif%} {% if url == link.url %} class="current"{% endif %}>
-          {% if hasFirst %} 
-              <ul class="first-level">
-                  {% for firstlevel in link.first-level %}  
-                      <li {% if url == firstlevel.url %} class="current" {% endif %} >
-                          {% assign hasSecond = firstlevel.second-level != undefined %}
-                          {% if hasSecond %} 
-                              <ul class="second-level">
-                                  {% for secondlevel in firstlevel.second-level %}
-                                      <li>
-                                          <a href="{{ secondlevel.url }}">{{ secondlevel.text }}</a>
-                                      </li>
-                                  {% endfor %}
-                              </ul>
-                          {% endif %}
-                          <a {% if firstlevel.target != undefined %} target="{{firstlevel.target}}" {% endif %} href="{{ firstlevel.url }}">{{ firstlevel.text }}{% if hasSecond %} <i class='icon-right-dir-2'></i>{% endif %}</a>
-                      </li>
-                  {% endfor %}
-              </ul>                   
-          {% endif %}
-          <a href="{{link.url}}"  class="{{link.icon}}">{{link.root}} {% if hasFirst %} <i class='icon-down-dir-2'></i>{% endif %}</a>
+  {% for link in site.navigation %}
+  {% assign url = page.url|remove:'index.html' %}
+  {% assign hasFirst = link.first-level != undefined %}
+  <li {% if hasFirst %} class="nested" {% endif%} {% if url == link.url %} class="current" {% endif %}>
+    {% if hasFirst %}
+    <ul class="first-level">
+      {% for firstlevel in link.first-level %}
+      <li {% if url == firstlevel.url %} class="current" {% endif %}>
+        {% assign hasSecond = firstlevel.second-level != undefined %}
+        {% if hasSecond %}
+        <ul class="second-level">
+          {% for secondlevel in firstlevel.second-level %}
+          <li>
+            <a href="{{ secondlevel.url }}">{{ secondlevel.text }}</a>
+          </li>
+          {% endfor %}
+        </ul>
+        {% endif %}
+        <a {% if firstlevel.target != undefined %} target="{{firstlevel.target}}" {% endif %}
+          href="{{ firstlevel.url }}">{{ firstlevel.text }}{% if hasSecond %} <i
+            class='icon-right-dir-2'></i>{% endif %}</a>
       </li>
-    {% endfor %}
-  </ul>
+      {% endfor %}
+    </ul>
+    {% endif %}
+    <a href="{{link.url}}" class="{{link.icon}}">{{link.root}} {% if hasFirst %} <i
+        class='icon-down-dir-2'></i>{% endif %}</a>
+  </li>
+  {% endfor %}
+</ul>
