--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -99,6 +99,7 @@
     }
 </style>
 -->
+<link rel="stylesheet" href="/assets/css/navigation.css">
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
 <ul class="navigation" style="clear:both;">
     {% for link in site.navigation %}
