--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,68 +9,38 @@
   https://github.com/mmistakes/minimal-mistakes/blob/master/LICENSE
 -->
 <html lang="{{ site.locale | slice: 0,2 | default: "en" }}" class="no-js">
-  <head>
-    {% include head.html %}
-    {% include head/custom.html %}
-    {% include google-analytics.html %}
 
-    <nav id="navbar" class="collapse navbar-collapse">
-        <ul class="nav navbar-nav">
-            {% assign links = site.data.navigation %}
-            {% for link in links %}
-                {% assign class = nil %}
-                {% if page.url contains link.url %}
-                    {% assign class = 'active' %}
-                {% endif %}
-                {% if link.sublinks %}
-                    <li class="dropdown {{ class }}">
-                        <a href="{{ site.url }}{{ site.baseurl }}{{ link.url }}" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ link.title }} <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            {% for sublink in link.sublinks %}
-                                {% if sublink.title == 'separator' %}
-                                    <li role="separator" class="divider"></li>
-                                {% else %}
-                                    <li>
-                                        <a href="{{ site.url }}{{ site.baseurl }}{{ sublink.url }}">{{ sublink.title }}</a>
-                                    </li>
-                                {% endif %}
-                            {% endfor %}
-                        </ul>
-                    </li>
-                {% else %}
-                    <li class="{{ class }}">
-                        <a href="{{ site.url }}{{ site.baseurl }}{{ link.url }}">{{ link.title }}</a>
-                    </li>
-                {% endif %}
-            {% endfor %}
-        </ul>
-    </nav>
-    
-  </head>
+<head>
+  {% include head.html %}
+  {% include head/custom.html %}
+  {% include google-analytics.html %}
+</head>
 
-  <body class="layout--{{ page.layout | default: layout.layout }}{% if page.classes or layout.classes %}{{ page.classes | default: layout.classes | join: ' ' | prepend: ' ' }}{% endif %}">
+<body
+  class="layout--{{ page.layout | default: layout.layout }}{% if page.classes or layout.classes %}{{ page.classes | default: layout.classes | join: ' ' | prepend: ' ' }}{% endif %}">
 
-    {% include_cached browser-upgrade.html %}
-    {% include_cached masthead.html %}
+  {% include_cached browser-upgrade.html %}
+  {% include_cached masthead.html %}
 
-    <div class="initial-content">
-      {{ content }}
-    </div>
+  <div class="initial-content">
+    {{ content }}
+  </div>
 
-    {% if site.search == true %}
-      <div class="search-content">
-        {% include_cached search/search_form.html %}
-      </div>
-    {% endif %}
+  {% if site.search == true %}
+  <div class="search-content">
+    {% include_cached search/search_form.html %}
+  </div>
+  {% endif %}
 
-    <div class="page__footer">
-      <footer>
-        {% include footer/custom.html %}
-        {% include_cached footer.html %}
-      </footer>
-    </div>
+  <div class="page__footer">
+    <footer>
+      {% include footer/custom.html %}
+      {% include_cached footer.html %}
+    </footer>
+  </div>
 
-    {% include scripts.html %}
+  {% include scripts.html %}
 
-  </body>
+</body>
+
 </html>
