--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -56,7 +56,7 @@
  <div>
     {% if site.data.sidecategory.toc[0] %}
       {% for item in site.data.sidecategory.toc %}
-        <h4>{{ item.title }}</h4>
+        <h4><a href="{{ item.url }}">{{ item.title }}</a></h4>
           {% if item.subfolderitems[0] %}
             <ul>
               {% for entry in item.subfolderitems %}
